# Super4PCS

./: .gitignore  .gitmodules  .travis.yml  4pcs.h  4pcs_8h_source.html  4pcs_8h_source.xhtml  CHANGELOG  CMakeLists.txt  CTestConfig.cmake  Makefile  README.md  README.txt  Super4PCS.sln  a03944_source.html  a03950_source.html  a03953_source.html  a03953_source.xhtml  a03956_source.html  a03956_source.xhtml  a03959_source.html  a03959_source.xhtml  a03962_source.html  a03962_source.xhtml  a03965_source.html  a03965_source.xhtml  a03968_source.html  a03968_source.xhtml  a03971_source.html  a03971_source.xhtml  a03974_source.html  a03974_source.xhtml  a03977_source.html  a03977_source.xhtml  a03980_source.html  a03980_source.xhtml  a03983_source.html  a03983_source.xhtml  a03986_source.html  a03986_source.xhtml  a03989_source.html  (+1479 more)
Super4PCS/: 4pcs.cc  4pcs.h  super4pcs.cc
Super4PCS/accelerators/: intersection.h  normalset.h  normalset.hpp
Super4PCS/io/: io.h
Super4pcs/: 4pcs.cc  Super4pcs.vcxproj  pairCreationFunctor.h  pairExtraction.h
Super4pcs/Inc/accelerators/pairExtraction/: intersectionNode.h
Super4pcs/Inc/io/: io.h  io_ply.h
Super4pcs/Lib/: ANN.lib  opencv_highgui300d.lib  opencv_imgcodecs300d.lib  opencv_imgproc300d.lib
Super4pcs/Src/: super4pcs.cc
Super4pcs/accelerators/: normalset.hpp
Super4pcs/io/: CMakeLists.txt
Super4pcs/utils/: timer.h
accelerators/: node.h
assets/: hippo1.ply  hippo2.ply
cmake/: AssetsAndScripts.cmake  Config.cmake.in  ConfigureChealpix.cmake  ConfigureCompiler.cmake  ConfigureTesting.cmake  FindMeshlab.cmake
demos/: CMakeLists.txt  demo-utils.h
demos/CGalWrapper/: CMakeLists.txt  main.cpp
demos/CGalWrapper/CGAL/: super4pcs.h
demos/CGalWrapper/CGAL/Polygon_mesh_processing/: super4pcs.h
demos/MeshlabPlugin/: CMakeLists.txt  filter_globalregistration.pro.in  readme.md.in
demos/MeshlabPlugin/filter_globalregistration/: globalregistration.cpp
demos/PCLWrapper/: CMakeLists.txt  main.cpp
demos/PCLWrapper/pcl/registration/: super4pcs.h
demos/PCLWrapper/pcl/registration/impl/: super4pcs.hpp
demos/Super4PCS/: CMakeLists.txt  super4pcs_test.cc
dep/chealpix/: CMakeLists.txt
doc/: Compilation.md  Datasets.md  Demos.md  Doxyfile.in  File-formats.md  Tests.md  Usage.md  overview.md
scripts/: run-example.bat  run-example.sh
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+77 more)
src/super4pcs/: 4pcs.cc  4pcs.h  Super4pcs.vcxproj  Super4pcs.vcxproj.filters  match4pcsBase.cc  match4pcsBase.h  pairCreationFunctor.h  pairExtraction.h  sampling.h  shared4pcs.h  super4pcs.cc  super4pcs_test.cc
src/super4pcs/accelerators/: CMakeLists.txt  bbox.h  kdtree.h  normalHealSet.cpp  normalHealSet.h  normalset.h  normalset.hpp  utils.h
src/super4pcs/accelerators/pairExtraction/: bruteForceFunctor.h  intersectionFunctor.h  intersectionNode.h  intersectionPrimitive.h
src/super4pcs/algorithms/: 4pcs.cc  4pcs.h  CMakeLists.txt  Functor4pcs.h  FunctorSuper4pcs.h  match4pcsBase.cc  match4pcsBase.h  match4pcsBase.hpp  pairCreationFunctor.h  super4pcs.cc  super4pcs.h
src/super4pcs/io/: CMakeLists.txt  io.cc  io.h  io_ply.h
src/super4pcs/utils/: CMakeLists.txt  geometry.h  logger.h  timer.h
stylesheets/: stylesheet.css
super4pcs/: 4pcs.cc  4pcs.h  Super4pcs.vcxproj  Super4pcs.vcxproj.filters  bbox.h  pairCreationFunctor.h  pairExtraction.h  shared4pcs.h  super4pcs.cc  super4pcs_test.cc
super4pcs/Inc/: shared4pcs.h
super4pcs/Lib/: chealpix.lib  opencv_core300d.lib  opencv_hal300d.lib  opencv_videoio300d.lib
super4pcs/accelerators/: CMakeLists.txt  bbox.h  intersection.h  kdtree.h  node.h  normalHealSet.cpp  normalHealSet.h  normalset.h  normalset.hpp  primitives.h  utils.h
super4pcs/accelerators/pairExtraction/: bruteForceFunctor.h  intersection.h  intersectionFunctor.h  intersectionNode.h  primitives.h
super4pcs/io/: CMakeLists.txt  io.cc  io.h  io_ply.h
super4pcs/utils/: disablewarnings.h  timer.h
tests/: CMakeLists.txt  matching.cc  pair_extraction.cc  quad_extraction.cc  testing.h
tests/externalAppTest/: CMakeLists.txt  main.cpp
